<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editPerformerAdMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".advert.management.PerformerAdvertisementEditor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="Advertise yourself to venues"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="#FFFFFF" />
    </com.google.android.material.appbar.AppBarLayout>

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:textColor="#000000"/>

    <ScrollView
        android:id="@+id/scrollDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerWindow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="367dp"
                android:layout_height="223dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:color/background_light"
                tools:layout_editor_absoluteY="24dp" />


            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image">

                <Button
                    android:id="@+id/galleryImage"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/button_rounded_flat_blue"
                    android:text="Gallery"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/takePhoto"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="80dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/button_rounded_flat_blue"
                    android:text="Camera"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <EditText
                android:id="@+id/venue_description_final"
                android:layout_width="144dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/distanceLabel"
                app:layout_constraintEnd_toStartOf="@+id/distanceLabel2"
                app:layout_constraintStart_toEndOf="@+id/distanceLabel" />

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Travel distance: "
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageLayout" />

            <TextView
                android:id="@+id/distanceLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="miles"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/venue_description_final"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/venue_description_final" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>











    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#12c2e9"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/editPerformerAdMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/cancel"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="50dp"
            android:layout_weight="1.0"
            android:text="Cancel"
            android:textColor="#FFFFFF"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/createListing"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.0"
            android:text="Confirm"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>