<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createVenueAdMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TabbedView.PlaceholderFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent" >
        android:focusable="true"
        android:focusableInTouchMode="true"

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="Advertise yourself to performers"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="#FFFFFF" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />


    </com.google.android.material.appbar.AppBarLayout>

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/button_holder"
        />

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#12c2e9"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/cancel"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="50dp"
            android:layout_weight="1.0"
            android:text="Cancel"
            android:textColor="#FFFFFF"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/createListing"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.0"
            android:text="Confirm"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>