<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/venueAdDetailsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TabbedView.PlaceholderFragment">

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="242dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Description"
        android:textAlignment="center"
...
